main/default/objects/Limits__c/Limits__c.object-meta.xml
<CustomObject>
    <label>Limits</label>
    <nameField>
        <displayFormat>L-{000000000}</displayFormat>
        <label>Limits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>