main/default/objects/Limits__c/fields/ActiveScratchOrgs__c.field-meta.xml
<CustomField>
    <fullName>ActiveScratchOrgs__c</fullName>
    <label>Active Scratch Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>