main/default/objects/Limits__c/fields/AnalyticsExternalDataSizeMB__c.field-meta.xml
<CustomField>
    <fullName>AnalyticsExternalDataSizeMB__c</fullName>
    <label>Analytics External Data Size MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>