main/default/objects/Limits__c/fields/ConcurrentAsyncGetReportInstances__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentAsyncGetReportInstances__c</fullName>
    <label>Concurrent Async Get Report Instances</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>