main/default/objects/Limits__c/fields/ConcurrentEinsteinDataInsightsStory__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentEinsteinDataInsightsStory__c</fullName>
    <label>Concurrent Einstein Data Insights Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>