main/default/objects/Limits__c/fields/ConcurrentEinsteinDiscoveryStory__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentEinsteinDiscoveryStory__c</fullName>
    <label>Concurrent Einstein Discovery Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>