main/default/objects/Limits__c/fields/ConcurrentSyncReportRuns__c.field-meta.xml
<CustomField>
    <fullName>ConcurrentSyncReportRuns__c</fullName>
    <label>Concurrent Sync Report Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>