main/default/objects/Limits__c/fields/CreateCustom__c.field-meta.xml
<CustomField>
    <fullName>CreateCustom__c</fullName>
    <label>Create Custom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>