main/default/objects/Limits__c/fields/DailyAnalyticsUploadedFilesSizeMB__c.field-meta.xml
<CustomField>
    <fullName>DailyAnalyticsUploadedFilesSizeMB__c</fullName>
    <label>Daily Analytics Uploaded Files Size MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>