main/default/objects/Limits__c/fields/DailyApiRequests__c.field-meta.xml
<CustomField>
    <fullName>DailyApiRequests__c</fullName>
    <label>Daily Api Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>