main/default/objects/Limits__c/fields/DailyAsyncApexExecutions__c.field-meta.xml
<CustomField>
    <fullName>DailyAsyncApexExecutions__c</fullName>
    <label>Daily Async Apex Executions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>