main/default/objects/Limits__c/fields/DailyAsyncApexTests__c.field-meta.xml
<CustomField>
    <fullName>DailyAsyncApexTests__c</fullName>
    <label>Daily Async Apex Tests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>