main/default/objects/Limits__c/fields/DailyBulkApiBatches__c.field-meta.xml
<CustomField>
    <fullName>DailyBulkApiBatches__c</fullName>
    <label>Daily Bulk Api Batches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>