main/default/objects/Limits__c/fields/DailyBulkV2QueryFileStorageMB__c.field-meta.xml
<CustomField>
    <fullName>DailyBulkV2QueryFileStorageMB__c</fullName>
    <label>Daily Bulk V2 Query File Storage MB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>