main/default/objects/Limits__c/fields/DailyBulkV2QueryJobs__c.field-meta.xml
<CustomField>
    <fullName>DailyBulkV2QueryJobs__c</fullName>
    <label>Daily Bulk V2 Query Jobs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>