main/default/objects/Limits__c/fields/DailyDeliveredPlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>DailyDeliveredPlatformEvents__c</fullName>
    <label>Daily Delivered Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>