main/default/objects/Limits__c/fields/DailyDurableGenericStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>DailyDurableGenericStreamingApiEvents__c</fullName>
    <label>Daily Durable Generic Streaming Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>