main/default/objects/Limits__c/fields/DailyDurableStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>DailyDurableStreamingApiEvents__c</fullName>
    <label>Daily Durable Streaming Api Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>