main/default/objects/Limits__c/fields/DailyEinsteinDataInsightsStoryCreation__c.field-meta.xml
<CustomField>
    <fullName>DailyEinsteinDataInsightsStoryCreation__c</fullName>
    <label>Daily Einstein Data Insights Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>