main/default/objects/Limits__c/fields/DailyEinsteinDiscoveryOptJobRuns__c.field-meta.xml
<CustomField>
    <fullName>DailyEinsteinDiscoveryOptJobRuns__c</fullName>
    <label>Daily Einstein Discovery Opt Job Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>