main/default/objects/Limits__c/fields/DailyEinsteinDiscoveryPredictAPICalls__c.field-meta.xml
<CustomField>
    <fullName>DailyEinsteinDiscoveryPredictAPICalls__c</fullName>
    <label>Daily Einstein Discovery Predict Calls</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>