main/default/objects/Limits__c/fields/DailyEinsteinDiscoveryPredictionsByCDC__c.field-meta.xml
<CustomField>
    <fullName>DailyEinsteinDiscoveryPredictionsByCDC__c</fullName>
    <label>Daily Einstein Discovery Predictions CDC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>