main/default/objects/Limits__c/fields/DailyEinsteinDiscoveryStoryCreation__c.field-meta.xml
<CustomField>
    <fullName>DailyEinsteinDiscoveryStoryCreation__c</fullName>
    <label>Daily Einstein Discovery Story Creation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>