main/default/objects/Limits__c/fields/DailyFunctionsApiCallLimit__c.field-meta.xml
<CustomField>
    <fullName>DailyFunctionsApiCallLimit__c</fullName>
    <label>Daily Functions Api Call Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>