main/default/objects/Limits__c/fields/DailyGenericStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>DailyGenericStreamingApiEvents__c</fullName>
    <label>Daily Generic Streaming Api Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>