main/default/objects/Limits__c/fields/DailyMetadataRetrievesWithDeps__c.field-meta.xml
<CustomField>
    <fullName>DailyMetadataRetrievesWithDeps__c</fullName>
    <label>Daily Metadata Retrieves With Deps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>