main/default/objects/Limits__c/fields/DailyScratchOrgs__c.field-meta.xml
<CustomField>
    <fullName>DailyScratchOrgs__c</fullName>
    <label>Daily Scratch Orgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>