main/default/objects/Limits__c/fields/DailyStandardVolumePlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>DailyStandardVolumePlatformEvents__c</fullName>
    <label>Daily Standard Volume Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>