main/default/objects/Limits__c/fields/DailyStreamingApiEvents__c.field-meta.xml
<CustomField>
    <fullName>DailyStreamingApiEvents__c</fullName>
    <label>Daily Streaming Api Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>