main/default/objects/Limits__c/fields/DailyWorkflowEmails__c.field-meta.xml
<CustomField>
    <fullName>DailyWorkflowEmails__c</fullName>
    <label>Daily Workflow Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>