main/default/objects/Limits__c/fields/DataStorageMB__c.field-meta.xml
<CustomField>
    <fullName>DataStorageMB__c</fullName>
    <label>Data Storage MB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>