main/default/objects/Limits__c/fields/DurableStreamingApiConcurrentClients__c.field-meta.xml
<CustomField>
    <fullName>DurableStreamingApiConcurrentClients__c</fullName>
    <label>Durable Streaming Api Concurrent Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>