main/default/objects/Limits__c/fields/FileStorageMB__c.field-meta.xml
<CustomField>
    <fullName>FileStorageMB__c</fullName>
    <label>File Storage MB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>