main/default/objects/Limits__c/fields/HourlyAsyncReportRuns__c.field-meta.xml
<CustomField>
    <fullName>HourlyAsyncReportRuns__c</fullName>
    <label>Hourly Async Report Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>