main/default/objects/Limits__c/fields/HourlyDashboardRefreshes__c.field-meta.xml
<CustomField>
    <fullName>HourlyDashboardRefreshes__c</fullName>
    <label>Hourly Dashboard Refreshes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>