main/default/objects/Limits__c/fields/HourlyDashboardResults__c.field-meta.xml
<CustomField>
    <fullName>HourlyDashboardResults__c</fullName>
    <label>Hourly Dashboard Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>