main/default/objects/Limits__c/fields/HourlyDashboardStatuses__c.field-meta.xml
<CustomField>
    <fullName>HourlyDashboardStatuses__c</fullName>
    <label>Hourly Dashboard Statuses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>