main/default/objects/Limits__c/fields/HourlyLongTermIdMapping__c.field-meta.xml
<CustomField>
    <fullName>HourlyLongTermIdMapping__c</fullName>
    <label>Hourly Long Term Id Mapping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>