main/default/objects/Limits__c/fields/HourlyManagedContentPublicRequests__c.field-meta.xml
<CustomField>
    <fullName>HourlyManagedContentPublicRequests__c</fullName>
    <label>Hourly Managed Content Public Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>