main/default/objects/Limits__c/fields/HourlyODataCallout__c.field-meta.xml
<CustomField>
    <fullName>HourlyODataCallout__c</fullName>
    <label>Hourly OData Callout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>