main/default/objects/Limits__c/fields/HourlyPublishedPlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>HourlyPublishedPlatformEvents__c</fullName>
    <label>Hourly Published Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>