main/default/objects/Limits__c/fields/HourlyPubStdVolPlatformEvents__c.field-meta.xml
<CustomField>
    <fullName>HourlyPubStdVolPlatformEvents__c</fullName>
    <label>Hourly Pub Std Vol Platform Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>