main/default/objects/Limits__c/fields/HourlyShortTermIdMapping__c.field-meta.xml
<CustomField>
    <fullName>HourlyShortTermIdMapping__c</fullName>
    <label>Hourly Short Term Id Mapping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>