main/default/objects/Limits__c/fields/HourlySyncReportRuns__c.field-meta.xml
<CustomField>
    <fullName>HourlySyncReportRuns__c</fullName>
    <label>Hourly Sync Report Runs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>