main/default/objects/Limits__c/fields/HourlyTimeBasedWorkflow__c.field-meta.xml
<CustomField>
    <fullName>HourlyTimeBasedWorkflow__c</fullName>
    <label>Hourly Time Based Workflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>