main/default/objects/Limits__c/fields/MassEmail__c.field-meta.xml
<CustomField>
    <fullName>MassEmail__c</fullName>
    <label>Mass Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>