main/default/objects/Limits__c/fields/MonthlyEinsteinDiscoveryStoryCreation__c.field-meta.xml
<CustomField>
    <fullName>MonthlyEinsteinDiscoveryStoryCreation__c</fullName>
    <label>Monthly Einstein Discovery Story</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>