main/default/objects/Limits__c/fields/MonthlyPlatformEventsUsageEntitlement__c.field-meta.xml
<CustomField>
    <fullName>MonthlyPlatformEventsUsageEntitlement__c</fullName>
    <description>Monthly Platform Events Usage Entitlement limit</description>
    <label>Monthly Platform Events Usage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>