main/default/objects/Limits__c/fields/PermissionSets__c.field-meta.xml
<CustomField>
    <fullName>PermissionSets__c</fullName>
    <label>Permission Sets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>