main/default/objects/Limits__c/fields/PlatformEventTriggersParallel__c.field-meta.xml
<CustomField>
    <fullName>PlatformEventTriggersParallel__c</fullName>
    <label>Platform Event Triggers Parallel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>