main/default/objects/Limits__c/fields/PrivateConnectOutboundCalloutMB__c.field-meta.xml
<CustomField>
    <fullName>PrivateConnectOutboundCalloutMB__c</fullName>
    <label>Private Connect Outbound Callout MB</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>