main/default/objects/Limits__c/fields/SingleEmail__c.field-meta.xml
<CustomField>
    <fullName>SingleEmail__c</fullName>
    <label>Single Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>