main/default/objects/Limits__c/fields/StreamingApiConcurrentClients__c.field-meta.xml
<CustomField>
    <fullName>StreamingApiConcurrentClients__c</fullName>
    <label>Streaming Api Concurrent Clients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>